--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "gray-matter": "4.0.2",
     "mongodb": "^3.6.6",
     "next": "latest",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "reactstrap": "^8.9.0",
     "remark": "11.0.2",
     "remark-html": "10.0.0",
     "swr": "^0.5.5",
